--- a/src/styles/Articles.css
+++ b/src/styles/Articles.css
@@ -1,4 +1,4 @@
-.Articles {
+.articles {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -6,7 +6,7 @@
   padding-top: 20px;
 }
 
-.Articles p {
+.articles p {
   border: solid;
   padding: 10px;
   text-align: center;
