--- a/src/styles/Comments.module.css
+++ b/src/styles/Comments.module.css
@@ -5,19 +5,25 @@
   max-width: 600px;
   margin: 0 auto;
   padding-top: 50px;
-  /* justify-content: flex-start; */
-  gap: 40px;
+  gap: 30px;
+}
+
+.commentCard {
+  background-color: white;
+  border: solid;
+  border-width: 2px;
+  width: 100%;
 }
 
 .topicAuthor {
   display: flex;
-  font-size: 10px;
+  font-size: 12px;
   gap: 3px;
   margin: 0;
+  padding: 10px;
 }
 
 .author {
-  font-weight: bold;
   margin: 0;
 }
 
@@ -25,6 +31,17 @@
   margin: 0;
 }
 
-.comments {
-  display: flex;
+.body {
+  margin: 0;
+  padding: 10px;
+}
+
+.btn {
+  margin: 10px;
+  margin-top: 20px;
+  border-radius: 30px;
+}
+
+.btn:hover {
+  border-color: rebeccapurple;
 }
