change font of header

--- a/src/styles/Header.module.css
+++ b/src/styles/Header.module.css
@@ -2,6 +2,8 @@
   color: red;
   text-decoration: none;
   margin-top: 0px;
+  font-family: 'Courier New', Courier, monospace;
+  font-size: 45px;
 }
 
 .logo {
