--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@ body {
 
 .nav {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   width: 100vw;
   background-color: white;
   padding-top: 10px;
@@ -15,7 +15,7 @@ body {
 .sort-by-order-by {
   display: flex;
   padding-top: 20px;
-  gap: 5px;
+  gap: 10px;
 }
 
 .sort-by-articles {
