--- a/src/styles/Login.module.css
+++ b/src/styles/Login.module.css
@@ -1,13 +1,12 @@
 .user {
   display: flex;
-
   padding: 20px;
   padding-left: 50px;
   padding-right: 50px;
   justify-content: space-between;
   border: solid;
   margin: 30px auto;
-  width: 400px;
+  width: 20%;
   background-color: white;
   font-size: 16px;
   border-radius: 10px;
