--- a/src/styles/Header.module.css
+++ b/src/styles/Header.module.css
@@ -2,7 +2,7 @@
   color: red;
   text-decoration: none;
   margin-top: 0px;
-  font-family: 'Courier New', Courier, monospace;
+  font-family: Arial, Helvetica, sans-serif;
   font-size: 45px;
 }
 
