--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@ body {
 .nav {
   display: flex;
   justify-content: space-around;
-  /* align-items: center; */
+  align-items: center;
   width: 100vw;
   background-color: white;
   position: sticky;
@@ -35,7 +35,6 @@ body {
   padding-right: 20px;
   max-width: 550px;
   margin: auto;
-  border: solid;
   border-radius: 10px;
   background-color: white;
   margin-top: 30px;
@@ -60,6 +59,7 @@ body {
 .image {
   width: 100%;
   height: auto;
+  border-radius: 10px;
 }
 
 .comments {
@@ -72,9 +72,7 @@ body {
   height: 40px;
   width: 120px;
   border-radius: 10px;
-  border-width: 3px;
-  border-color: grey;
-  margin-top: 10px;
+  background-color: #E2E7E9;
 }
 
 .react-select-sortby {
