--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@ body {
   display: flex;
   justify-content: space-around;
   align-items: center;
+  height: 80px;
   width: 100vw;
   background-color: white;
   position: sticky;
